# samplemaker

./: .gitignore  BUILD.md  QUICKSTART.md  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: fault.yml  feature_request.yml  improvement.yml
.github/ISSUE_TEMPLATES/: fault.yml
.github/workflows/: build_wheels.yml  ruff.yml
src/boopy/: CMakeLists.txt
src/samplemaker/: __init__.py  _legacy.py  devices.py  gdsreader.py  gdswriter.py  layout.py  makers.py  phc.py  routers.py  sequencer.py  shapes.py  viewers.py
src/samplemaker/baselib/: __init__.py  devices.py  waveguides.py
src/samplemaker/resources/: __init__.py
tests/: __init__.py  conftest.py  dummy.py  fakes.py  fixtures.py  test_baselib_devices.py  test_baselib_waveguides.py  test_devices.py  test_gdsreader.py  test_gdswriter.py  test_layout.py  test_makers.py  test_phc.py  test_routers.py  test_sequencer.py  test_shapes.py
tutorials/: 00_Tutorial_BasicDrawing.py  01_Tutorial_Shapes.py  02_Tutorial_CellReferences.py  03_Tutorial_GroupManipulation.py  04_Tutorial_Boolean.py  05_Tutorial_Devices.py  06_Tutorial_DeviceTables.py  07_Tutorial_Waveguides.py  08_Tutorial_WaveguideDevices.py  09_Tutorial_Circuits.py  10_Tutorial_ElectricalPorts.py  11_Tutorial_LayoutAssembly.py  12_Tutorial_ImportingCircuits.py  TutorialCollection.py
