[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[project]
name = "samplemaker"
authors = [
    { name = "Leonardo Midolo", email = "midolo@nbi.ku.dk"}
]
description = "Lithographic mask design package"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
version = "5.4.3"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy==2.*",
]

[project.urls]
Repository = "https://github.com/lmidolo/samplemaker.git"

[tool.scikit-build]
minimum-version = "0.11.6"
build-dir = "build/{wheel_tag}"
cmake.source-dir = "src/boopy"
wheel.install-dir = "samplemaker"
wheel.packages = ["src/samplemaker"]

[tool.cibuildwheel]
skip = "*-musllinux*"

[tool.cibuildwheel.linux]
before-all = "yum install -y boost-devel"

[tool.cibuildwheel.macos]
before-all = "brew install boost"

[tool.cibuildwheel.windows]
environment = { CMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" }
before-all = [
    "vcpkg install boost-polygon:x64-windows",
    "vcpkg integrate install",
]