[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[project]
name = "samplemaker-sparrow"
authors = [
    { name = "Leonardo Midolo", email = "midolo@nbi.ku.dk"},
    { name = "Jeppe Roulund", email = "jeppe.roulund@sparrowquantum.com"}
]
description = "Lithographic mask design package"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license-files = ["LICENSE.md"]
license = "BSD-3-Clause"
version = "5.4.8"
dependencies = [
    "asteval>=1.0.9",
    "matplotlib>=3.10.5",
    "numpy==2.*",
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/SparrowQuantum/samplemaker.git"

[tool.ruff]
extend-exclude = ["tutorials/*"]

[tool.ruff.lint]
extend-select = [
    "D", # Pydocstyle
    "E", # Pycodestyle errors
    "W", # Pycodestyle warnings
    "ANN", # flake8-annotations
    "BLE", # flake8-blind-except
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T100", # flake8-debugger
    "EM", # flake8-errmsg
    "I", # isort
    "NPY", # Numpy specific rules
    "UP", # Pyupgrade
    ]
ignore = ["D203", "D213"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D1", "S101"]

[tool.scikit-build]
minimum-version = "0.11.6"
build-dir = "build/{wheel_tag}"
cmake.source-dir = "src/boopy"
wheel.install-dir = "samplemaker"
wheel.packages = ["src/samplemaker"]

[tool.cibuildwheel]
skip = ["*-musllinux*", "*-win32*"]
test-requires = "pytest"
test-sources = ["tests"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "yum install -y boost-devel"

[tool.cibuildwheel.macos]
before-all = "brew install boost"

[tool.cibuildwheel.windows]
environment = { BOOST_ROOT = "C:/vcpkg/installed/x64-windows" }
before-all = [
    "vcpkg install boost-polygon:x64-windows",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "ruff==0.15.1",
]
